CPM-64;Fix;Allows toolbar to wrap items if it's necessary

--- a/src/components/toolbar/style.css
+++ b/src/components/toolbar/style.css
@@ -1,6 +1,7 @@
 /* 'tpp' stands for 'Tree Panel Plugin' just to make it unique from Grafana class names. */
 .tpp-toolbar {
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
   align-items: center;
   margin: 16px 4px;
